# ad_logger

./: CMakeLists.txt  README.md
include/: ad_logger.h
src/: ad_logger.c
tests/: CMakeLists.txt  test_logger.cpp  test_main.cpp
